--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -97,7 +97,7 @@
 </form>
 
 <div class="car-grid">
-  {% if cars %} {% for car in cars %}
+  {% if cars and user.is_authenticated%} {% for car in cars %}
   <div class="car-card">
     <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}" />
     <h2>{{ car.brand }} {{ car.model }}</h2>
