--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -89,6 +89,16 @@
   button[type="submit"]:hover {
     background-color: #108eb8;
   }
+
+  a {
+    font-size: 18px;
+    color: #333;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #0096c7;
+  }
 </style>
 
 <form method="GET" action="{% url 'cars_list' %}">
@@ -97,12 +107,14 @@
 </form>
 
 <div class="car-grid">
-  {% if cars and user.is_authenticated%} {% for car in cars %}
-  <div class="car-card">
-    <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}" />
-    <h2>{{ car.brand }} {{ car.model }}</h2>
-    <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
-  </div>
+  {% if cars %} {% for car in cars %}
+  <a href="{% url 'car_datail' car.pk %}">
+    <div class="car-card">
+      <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}" />
+      <h2>{{ car.brand }} {{ car.model }}</h2>
+      <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
+    </div>
+  </a>
   {% endfor %} {% else %}
   <p class="no-results">Nenhum carro encontrado.</p>
   {% endif %}
