--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -108,7 +108,7 @@
 
 <div class="car-grid">
   {% if cars %} {% for car in cars %}
-  <a href="{% url 'car_datail' car.pk %}">
+  <a href="{% url 'car_detail' car.pk %}">
     <div class="car-card">
       <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}" />
       <h2>{{ car.brand }} {{ car.model }}</h2>
