--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,15 +71,13 @@
     <header>
       <nav>
         <ul>
-          {% if user.is_authenticated %}
-          <li>Olá, {{ user.username }}</li>
-          {% endif %} {% if not user.is_authenticated %}
+          {% if not user.is_authenticated %}
           <li><a href="{% url 'register' %}">Cadastre-se</a></li>
           <li><a href="{% url 'login' %}">Login</a></li>
-          {% endif %}
+          {% endif %} {% if user.is_authenticated %}
+          <li>Olá, {{ user.username }}</li>
           <li><a href="{% url 'cars_list' %}">Carros</a></li>
-
-          {% if user.is_authenticated %}
+          <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
           <li><a href="{% url 'logout' %}">Sair</a></li>
           {% endif %}
         </ul>
