--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -78,26 +78,19 @@
   }
 </style>
 <div class="car-card">
-  <img
-    src="{{ object.photo.url }}"
-    alt="{{ object.model }} - {{ object.brand }}"
-  />
+  <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}" />
   <h2>{{ object.brand }} {{ object.model }}</h2>
   <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
   <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
   <p><strong>Placa:</strong> {{ object.plate }}</p>
   <p><strong>Preço:</strong> R$ {{ object.value }}</p>
   {% if object.description %}
-    <p><strong>Descrição:</strong> {{ object.description }}</p>
+  <p><strong>Descrição:</strong> {{ object.description }}</p>
   {% endif %}
 </div>
-{% if user.is_authenticated %}
+{% if user.is_superuser %}
 <div class="buttons-container">
-  <a href="{% url 'car_update' pk=object.pk %}" class="btn btn-primary"
-    >Editar</a
-  >
-  <a href="{% url 'car_delete' pk=object.pk %}" class="btn btn-danger"
-    >Deletar</a
-  >
+  <a href="{% url 'car_update' pk=object.pk %}" class="btn btn-primary">Editar</a>
+  <a href="{% url 'car_delete' pk=object.pk %}" class="btn btn-danger">Deletar</a>
 </div>
 {% endif %} {% endblock %}
